include/gpac/filters.h


typedef struct __gf_filter GF_Filter;
typedef struct __gf_filter_pid GF_FilterPid;
typedef struct __gf_filter_pck GF_FilterPacket;
typedef union __gf_filter_event GF_FilterEvent;
typedef struct __gf_prop_val GF_PropertyValue;
struct __gf_prop_val
{
	GF_PropType type;
	union {
		u64 longuint;
		s64 longsint;
		s32 sint;
		u32 uint;
		Bool boolean;
		GF_Fraction frac;
		GF_Fraction64 lfrac;
		Fixed fnumber;
		Double number;
		GF_PropVec2i vec2i;
		GF_PropVec2 vec2;
		GF_PropVec3i vec3i;
		GF_PropVec3 vec3;
		GF_PropVec4i vec4i;
		GF_PropVec4 vec4;
		GF_PropData data;
		char *string;
		void *ptr;
		GF_List *string_list;
		GF_PropUIntList uint_list;
		GF_PropIntList sint_list;
		GF_PropVec2iList v2i_list;
	} value;
};
u32 gf_props_get_id(const char *name);
void gf_filter_make_sticky(GF_Filter *filter);
u32 gf_filter_get_num_events_queued(GF_Filter *filter);
void gf_filter_ask_rt_reschedule(GF_Filter *filter, u32 us_until_next);
void gf_filter_post_process_task(GF_Filter *filter);
void gf_filter_setup_failure(GF_Filter *filter, GF_Err reason);
void gf_filter_notification_failure(GF_Filter *filter, GF_Err reason, Bool force_disconnect);
void gf_filter_set_max_extra_input_pids(GF_Filter *filter, u32 max_extra_pids);
Bool gf_filter_block_enabled(GF_Filter *filter);
void gf_filter_block_eos(GF_Filter *filter, Bool do_block);
void gf_filter_get_output_buffer_max(GF_Filter *filter, u32 *max_buf, u32 *max_playout_buf);
void gf_filter_hint_single_clock(GF_Filter *filter, u64 time_in_us, GF_Fraction64 media_timestamp);
void gf_filter_get_clock_hint(GF_Filter *filter, u64 *time_in_us, GF_Fraction64 *media_timestamp);
Bool gf_filter_all_sinks_done(GF_Filter *filter);
Bool gf_filter_connections_pending(GF_Filter *filter);
GF_Err gf_filter_prevent_blocking(GF_Filter *filter, Bool prevent_blocking_enabled);
GF_Err gf_filter_update_status(GF_Filter *filter, u32 percent, char *szStatus);
void gf_filter_pid_remove(GF_FilterPid *PID);
GF_Err gf_filter_pid_set_property(GF_FilterPid *PID, u32 prop_4cc, const GF_PropertyValue *value);
GF_Err gf_filter_pid_set_property_str(GF_FilterPid *PID, const char *name, const GF_PropertyValue *value);
GF_Err gf_filter_pid_set_info(GF_FilterPid *PID, u32 prop_4cc, const GF_PropertyValue *value);
GF_Err gf_filter_pid_set_info_str(GF_FilterPid *PID, const char *name, const GF_PropertyValue *value);
void gf_filter_pid_set_name(GF_FilterPid *PID, const char *name);
const char *gf_filter_pid_get_name(GF_FilterPid *PID);
const char *gf_filter_pid_get_filter_name(GF_FilterPid *PID);
void gf_filter_pid_set_max_buffer(GF_FilterPid *PID, u32 total_duration_us);
u32 gf_filter_pid_get_max_buffer(GF_FilterPid *PID);
Bool gf_filter_pid_is_filter_in_parents(GF_FilterPid *PID, GF_Filter *filter);
Bool gf_filter_pid_get_buffer_occupancy(GF_FilterPid *PID, u32 *max_units, u32 *nb_pck, u32 *max_duration, u32 *duration);
void gf_filter_pid_set_loose_connect(GF_FilterPid *PID);
GF_Err gf_filter_pid_negociate_property(GF_FilterPid *PID, u32 prop_4cc, const GF_PropertyValue *value);
GF_Err gf_filter_pid_negociate_property_dyn(GF_FilterPid *PID, char *name, const GF_PropertyValue *value);
const GF_PropertyValue *gf_filter_pid_caps_query(GF_FilterPid *PID, u32 prop_4cc);
const GF_PropertyValue *gf_filter_pid_caps_query_str(GF_FilterPid *PID, const char *prop_name);
GF_Err gf_filter_pid_reset_properties(GF_FilterPid *PID);
GF_Err gf_filter_pid_copy_properties(GF_FilterPid *dst_pid, GF_FilterPid *src_pid);
GF_Err gf_filter_pid_set_framing_mode(GF_FilterPid *PID, Bool requires_full_blocks);
u64 gf_filter_pid_query_buffer_duration(GF_FilterPid *PID, Bool check_pid_full);
void gf_filter_pid_set_eos(GF_FilterPid *PID);
Bool gf_filter_pid_has_seen_eos(GF_FilterPid *PID);
Bool gf_filter_pid_is_eos(GF_FilterPid *PID);
Bool gf_filter_pid_first_packet_is_empty(GF_FilterPid *PID);
GF_FilterPacket * gf_filter_pid_get_packet(GF_FilterPid *PID);
Bool gf_filter_pid_get_first_packet_cts(GF_FilterPid *PID, u64 *cts);
void gf_filter_pid_drop_packet(GF_FilterPid *PID);
u32 gf_filter_pid_get_packet_count(GF_FilterPid *PID);
Bool gf_filter_pid_check_caps(GF_FilterPid *PID);
Bool gf_filter_pid_would_block(GF_FilterPid *PID);
u32 gf_filter_pid_get_timescale(GF_FilterPid *PID);
void gf_filter_pid_clear_eos(GF_FilterPid *PID, Bool all_pids);
void gf_filter_pid_set_clock_mode(GF_FilterPid *PID, Bool filter_in_charge);
GF_Err gf_filter_pid_set_discard(GF_FilterPid *PID, Bool discard_on);
void gf_filter_pid_discard_block(GF_FilterPid *PID);
GF_Err gf_filter_pid_require_source_id(GF_FilterPid *PID);
void gf_filter_pid_recompute_dts(GF_FilterPid *PID, Bool do_recompute);
u32 gf_filter_pid_get_min_pck_duration(GF_FilterPid *PID);
void gf_filter_pid_send_event(GF_FilterPid *PID, GF_FilterEvent *evt);
Bool gf_filter_pid_is_playing(GF_FilterPid *PID);
GF_Err gf_filter_pid_allow_direct_dispatch(GF_FilterPid *PID);
GF_Err gf_filter_pck_forward(GF_FilterPacket *reference, GF_FilterPid *PID);
typedef enum
{
	GF_FILTER_CLOCK_NONE=0,
	GF_FILTER_CLOCK_PCR,
	GF_FILTER_CLOCK_PCR_DISC,
} GF_FilterClockType;
GF_FilterClockType gf_filter_pid_get_clock_info(GF_FilterPid *PID, u64 *clock_val, u32 *timescale);