share/python/libgpac.py


    def update_status(self, status, percent):
        _libgpac.gf_filter_update_status(self._filter, percent, status.encode('utf-8'))

    def reschedule(self, when=0):
        if when:
            _libgpac.gf_filter_ask_rt_reschedule(self._filter, when)
        else:
            _libgpac.gf_filter_post_process_task(self._filter, when)

    def notify_failure(self, err, error_type=GF_SETUP_ERROR):
        if error_type==GF_NOTIF_ERROR:
            _libgpac.gf_filter_notification_failure(self._filter, err, False)
        elif error_type==GF_NOTIF_ERROR_AND_DISCONNECT:
            _libgpac.gf_filter_notification_failure(self._filter, err, True)
        else:
            _libgpac.gf_filter_setup_failure(self._filter, err)

    def make_sticky(self):
        _libgpac.gf_filter_make_sticky(self._filter)

    def prevent_blocking(self, enable):
        _libgpac.gf_filter_prevent_blocking(self._filter, enable)

    def block_eos(self, enable):
        _libgpac.gf_filter_block_eos(self._filter, enable)

    def set_max_pids(self, max_pids):
        _libgpac.gf_filter_set_max_extra_input_pids(self._filter, max_pids)

    def hint_clock(self, clock_us, media_time):
        _libgpac.gf_filter_hint_single_clock(self._filter, clock_us, media_time)

    @property
    def block_enabled(self):
        return _libgpac.gf_filter_block_enabled(self._filter)

    @property
    def output_buffer(self):
        val = c_uint(0)
        _libgpac.gf_filter_get_output_buffer_max(self._filter, byref(val), None)
        return val.value

    @property
    def playout_buffer(self):
        val = c_uint(0)
        _libgpac.gf_filter_get_output_buffer_max(self._filter, None, byref(val))
        return val.value

    @property
    def sinks_done(self):
        return _libgpac.gf_filter_all_sinks_done(self._filter)

    @property
    def nb_evts_queued(self):
        return _libgpac.gf_filter_get_num_events_queued(self._filter)

    @property 
    def clock_hint_time(self):
        val = c_ulonglong(0)
        _libgpac.gf_filter_get_clock_hint(self._filter, byref(val), None)
        return val.value;

    @property 
    def clock_hint_mediatime(self):
        val = GF_Fraction64
        _libgpac.gf_filter_get_clock_hint(self._filter, None, byref(val))
        return val.value;

    @property 
    def connections_pending(self):
        return _libgpac.gf_filter_connections_pending(self._filter)

    #todo
    #add_source, add_destination, add_filter: not needed, acces to filter session

#
#        filter PID bindings
#

_libgpac.gf_filter_pid_copy_properties.argtypes = [GF_FilterPid, GF_FilterPid]
_libgpac.gf_filter_pck_forward.argtypes = [GF_FilterPacket, GF_FilterPid]

_libgpac.gf_filter_pid_set_property.argtypes = [GF_FilterPid, c_uint, POINTER(GF_PropertyValue)]
_libgpac.gf_filter_pid_set_property_str.argtypes = [GF_FilterPid, c_char_p, POINTER(GF_PropertyValue)]
_libgpac.gf_filter_pid_set_info.argtypes = [GF_FilterPid, c_uint, POINTER(GF_PropertyValue)]
_libgpac.gf_filter_pid_set_info_str.argtypes = [GF_FilterPid, c_char_p, POINTER(GF_PropertyValue)]
_libgpac.gf_filter_pid_clear_eos.argtypes = [GF_FilterPid, c_bool]
_libgpac.gf_filter_pid_check_caps.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_check_caps.restype = c_bool
_libgpac.gf_filter_pid_discard_block.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_allow_direct_dispatch.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_reset_properties.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_get_clock_info.argtypes = [GF_FilterPid, POINTER(c_longlong), POINTER(c_uint)]
_libgpac.gf_filter_pid_remove.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_is_filter_in_parents.argtypes = [GF_FilterPid, GF_Filter]
_libgpac.gf_filter_pid_is_filter_in_parents.restype = c_bool

_libgpac.gf_filter_pid_get_name.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_get_name.restype = c_char_p
_libgpac.gf_filter_pid_set_name.argtypes = [GF_FilterPid, c_char_p]

_libgpac.gf_filter_pid_is_eos.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_is_eos.restype = c_bool
_libgpac.gf_filter_pid_set_eos.argtypes = [GF_FilterPid]

_libgpac.gf_filter_pid_has_seen_eos.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_has_seen_eos.restype = c_bool

_libgpac.gf_filter_pid_would_block.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_would_block.restype = c_bool
_libgpac.gf_filter_pid_set_loose_connect.argtypes = [GF_FilterPid]

_libgpac.gf_filter_pid_set_framing_mode.argtypes = [GF_FilterPid, c_bool]

_libgpac.gf_filter_pid_get_max_buffer.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_get_max_buffer.restype = c_uint
_libgpac.gf_filter_pid_set_max_buffer.argtypes = [GF_FilterPid, c_uint]

_libgpac.gf_filter_pid_query_buffer_duration.argtypes = [GF_FilterPid, c_bool]
_libgpac.gf_filter_pid_query_buffer_duration.restype = c_ulonglong

_libgpac.gf_filter_pid_first_packet_is_empty.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_first_packet_is_empty.restype = c_bool

_libgpac.gf_filter_pid_get_first_packet_cts.argtypes = [GF_FilterPid, POINTER(c_ulonglong)]
_libgpac.gf_filter_pid_get_first_packet_cts.restype = c_bool

_libgpac.gf_filter_pid_get_packet_count.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_get_timescale.argtypes = [GF_FilterPid]

_libgpac.gf_filter_pid_set_clock_mode.argtypes = [GF_FilterPid, c_bool]
_libgpac.gf_filter_pid_set_discard.argtypes = [GF_FilterPid, c_bool]

_libgpac.gf_filter_pid_require_source_id.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_recompute_dts.argtypes = [GF_FilterPid, c_bool]


_libgpac.gf_filter_pid_get_min_pck_duration.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_is_playing.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_is_playing.restype = c_bool

_libgpac.gf_filter_pid_get_filter_name.argtypes = [GF_FilterPid]
_libgpac.gf_filter_pid_is_playing.restype = c_char_p


_libgpac.gf_filter_pid_caps_query.argtypes = [GF_FilterPid, c_uint]
_libgpac.gf_filter_pid_caps_query.restype = POINTER(GF_PropertyValue)
_libgpac.gf_filter_pid_caps_query_str.argtypes = [GF_FilterPid, c_char_p]
_libgpac.gf_filter_pid_caps_query_str.restype = POINTER(GF_PropertyValue)

_libgpac.gf_filter_pid_negociate_property.argtypes = [GF_FilterPid, c_uint, POINTER(GF_PropertyValue)]
_libgpac.gf_filter_pid_negociate_property_dyn.argtypes = [GF_FilterPid, c_char_p, POINTER(GF_PropertyValue)]


class BufferOccupancy:
  def __init__(self, max_units, nb_pck, max_dur, dur, is_final_flush):
    self.max_units = max_units
    self.nb_pck = nb_pck
    self.max_dur = max_dur
    self.dur = dur
    self.is_final_flush = is_final_flush


class FilterPid:
    def __init__(self, filter, pid, IsInput):
        self._filter = filter
        self._pid = pid
        self._cur_pck = None
        self._input = IsInput

    def send_event(self, evt):
        evt.base.on_pid = self._pid
        _libgpac.gf_filter_pid_send_event(self._pid, byref(evt))

    def remove(self):
        if self._input:
            raise Exception('Cannot remove input pid')
            return
        _libgpac.gf_filter_pid_remove(self._pid)

    def enum_props(self, callback_obj):
        self._filter._pid_enum_props_ex(callback_obj, self._pid)

    def get_prop(self, pname):
        return self._filter._pid_prop_ex(pname, self._pid, False)

    def get_info(self, pname):
        return self._filter._pid_prop_ex(pname, self._pid, True)

    def get_packet(self):
        if self._cur_pck:
            return self._cur_pck
        pck = _libgpac.gf_filter_pid_get_packet(self._pid)
        if pck:
            self._cur_pck = FilterPacket(pck, True)
            return self._cur_pck

    def drop_packet(self):
        if self._cur_pck:
            self._cur_pck = None
            _libgpac.gf_filter_pid_drop_packet(self._pid)


    def copy_props(self, ipid):
        if self._input:
            raise Exception('Cannot copy properties on input PID')
            return
        if ipid==None:
            return
        err = _libgpac.gf_filter_pid_copy_properties(self._pid, ipid._pid)
        if err<0:
            raise Exception('Cannot copy properties: ' + e2s(err) )
    
    def reset_props(self):
        if self._input:
            raise Exception('Cannot reset properties on input PID')
            return
        _libgpac.gf_filter_pid_reset_properties(self._pid)

    def forward(self, ipck):
        if self._input:
            raise Exception('Cannot copy properties on input PID')
            return
        if ipck==None:
            return
        _libgpac.gf_filter_pck_forward(ipck._pck, self._pid)

    def set_prop(self, pcode, prop):
        if self._input:
            raise Exception('Cannot set properties on input PID')
            return
        prop_4cc = pcode;
        prop_name = None;
        if isinstance(pcode, str):
            _pname = pcode.encode('utf-8')
            prop_4cc = _libgpac.gf_props_get_id(_pname)
            if prop_4cc==0:
                prop_name = _pname

        if prop==None:
            if prop_4cc:
                _libgpac.gf_filter_pid_set_property(self._pid, prop_4cc, None)
            else:
                _libgpac.gf_filter_pid_set_property_str(self._pid, prop_name, None)
            return

        prop_val = _make_prop(prop_4cc, pcode, prop)
        if prop_4cc:
            _libgpac.gf_filter_pid_set_property(self._pid, prop_4cc, byref(prop_val))
        else:
            _libgpac.gf_filter_pid_set_property_str(self._pid, prop_name, byref(prop_val))

    def set_info(self, pcode, prop):
        if self._input:
            raise Exception('Cannot set info on input PID')
            return
        prop_4cc = pcode;
        prop_name = None;
        if isinstance(pcode, str):
            _pname = pcode.encode('utf-8')
            prop_4cc = _libgpac.gf_props_get_id(_pname)
            if prop_4cc==0:
                prop_name = _pname

        if prop==None:
            if prop_4cc:
                _libgpac.gf_filter_pid_set_info(self._pid, prop_4cc, None)
            else:
                _libgpac.gf_filter_pid_set_info_str(self._pid, prop_name, None)
            return

        prop_val = _make_prop(prop_4cc, pcode, prop)
        if prop_4cc:
            _libgpac.gf_filter_pid_set_info(self._pid, prop_4cc, byref(prop_val))
        else:
            _libgpac.gf_filter_pid_set_info_str(self._pid, prop_name, byref(prop_val))

    def clear_eos(_self, all_pids):
        _libgpac.gf_filter_pid_clear_eos(self._pid, all_pids)

    def check_caps(self):
        return _libgpac.gf_filter_pid_check_caps(self._pid)

    def discard_block(self):
        _libgpac.gf_filter_pid_discard_block(self._pid)

    def allow_direct_dispatch(self):
        _libgpac.gf_filter_pid_allow_direct_dispatch(self._pid)

    def get_clock_type(self):
        return _libgpac.gf_filter_pid_get_clock_info(self._pid, None, None)

    def get_clock_timestamp(self):
        timestamp = c_longlong(0)
        timescale = c_uint(0)
        _libgpac.gf_filter_pid_get_clock_info(self._pid, byref(timestamp), byref(timescale))
        v = GF_Fraction64();
        v.value.num = timestamp.value
        v.value.den = timescale.value
        return v

    def is_filter_in_parents(self, filter):
        return _libgpac.gf_filter_pid_is_filter_in_parents(self._pid, filter._f);

    def get_buffer_occupancy(self):
        max_units = c_uint(0)
        nb_pck = c_uint(0)
        max_dur = c_uint(0)
        dur = c_uint(0)
        in_final_flush = _libgpac.gf_filter_pid_get_buffer_occupancy(self._pid, byref(max_units), byref(nb_pck), byref(max_dur), byref(dur) )
        in_final_flush = not in_final_flush
        return BufferOccupancy(max_units, nb_pck, max_dur, dur, not_in_final_flush)

    def loose_connect(self):
        return _libgpac.gf_filter_pid_set_loose_connect(slef._pid)

    def set_framing(self, framed):
        _libgpac.gf_filter_pid_set_framing_mode(self._pid, framed)

    def set_clock_mode(self, cmode):
        _libgpac.gf_filter_pid_set_clock_mode(self._pid, cmode)
